--- a/wp-content/themes/kickstart/style.css
+++ b/wp-content/themes/kickstart/style.css
@@ -134,7 +134,7 @@ th:only-child{-moz-border-radius: 6px 6px 0 0;-webkit-border-radius: 6px 6px 0 0
 #top-sub-nav-wrapper{width:100%; background:#282A2B; padding-bottom: 15px;}
 #top-sub-nav-container{width:960px; margin:0 auto; padding: 16px 0px;}
 
-#top-sub-nav{width:470px; color:#b8b4b4; float:right; text-align:right; font-size: 11px;}
+#top-sub-nav{color:#b8b4b4; float:right; text-align:right; font-size: 11px;}
 #top-sub-nav ul{list-style:none; margin:0;}
 #top-sub-nav ul li{float:left;}
 #top-sub-nav ul li a{color: #BCBCBC; padding:0 12px; border-right: 1px solid #1E1E1E; box-shadow: 1px 0px 0px rgba(224, 224, 224, 0.102); -moz-box-shadow: 1px 0px 0px rgba(224, 224, 224, 0.102); -webkit-box-shadow: 1px 0px 0px rgba(224, 224, 224, 0.102);}
